# model-trainer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yaml  cd.yaml  ci.yaml  deployment.yaml
app/: Dockerfile
example/: config.yaml  data_module.py  main.py
model_trainer/core/: experiment_config.py  hyperparam_tuning.py  hyperparameter.py  hyperparameter_tuning.py  logging.py  loss.py  optimizer.py  training.py  training_config.py
tests/core/: experiment_config_test.py  hyperparam_tuning_test.py  hyperparameter_test.py  hyperparameter_tuning_test.py  loss_test.py  optimizer_test.py  test_loss.py  training_config_test.py  training_test.py
tests/mock_data/: data_module.py  dataset.py  model.py
