[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "model-trainer"
description = "PyTorch ML model training app"
version = "1.0.0b"
requires-python = ">=3.11"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch==2.1.0",
    "lightning==2.1.0",
    "optuna==3.4.0",
    "pandas==2.1.3",
    "mlflow==2.9.2",
    "numpy==1.26.2",
    "pyarrow==13.0.0",
]

[project.optional-dependencies]
test = ["pytest==7.4.3"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
